<resources>
    <string name="Icon_name_classic_mode">Home screen settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_all_app_custom_category_finish">Done</string>
    <string name="accessibility_all_app_custom_category_item_remove">Remove \"%1$s\" from categories</string>
    <string name="accessibility_clear_search_bar_text">Clear search bar</string>
    <string name="accessibility_enter_all_app_mode">Open App drawer</string>
    <string name="accessibility_enter_all_app_settings">Open App drawer settings</string>
    <string name="accessibility_menu_item_smallwindow_disable">"This app doesn't support floating windows"</string>
    <string name="accessibility_menu_item_smallwindow_enable">This app supports floating windows</string>
    <string name="accessibility_menu_item_split_disable">"App doesn't support Split screen."</string>
    <string name="accessibility_menu_item_split_enable">App supports Split screen</string>
    <string name="accessibility_recent_task_enter">Opened Recents</string>
    <string name="accessibility_recent_task_exit">Closed Recents</string>
    <string name="accessibility_recent_task_locked_state">Locked</string>
    <string name="accessibility_recent_task_memory_info">Total RAM: %2$s | Available RAM: %1$s. Double tap to clear.</string>
    <string name="accessibility_recent_task_show_menu">More options</string>
    <string name="accessibility_recent_task_unlocked_state">Unlocked</string>
    <string name="accessibility_recents_item_dismissed">%1$s cleared</string>
    <string name="accessibility_recents_item_open_app_info">Open %s application info.</string>
    <string name="accessibility_splite_screen_primary">Added as the primary app in Split screen</string>
    <string name="accessibility_splite_screen_secondary">Added as the secondary app in Split screen</string>
    <string name="action_add_to_workspace">Add to workspace</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="activity_not_found">"App isn't installed on your device"</string>
    <string name="activity_not_unlocked">Wait until your device is fully rebooted before opening apps</string>
    <string name="add_custom_category">Custom</string>
    <string name="add_screen">Add screen</string>
    <string name="add_to_workspace">Add to Home screen</string>
    <string name="added_all_category">Added all apps successfully</string>
    <string name="afternoon">Afternoon</string>
    <string name="agree_button">Agree</string>
    <string name="alexa_notification_add">Add</string>
    <string name="alexa_notification_cancel">Not now</string>
    <string name="alexa_notification_content">Add Alexa shortcut to Control center?</string>
    <string name="all_app_category_all">All</string>
    <string name="all_app_category_communication">Communication</string>
    <string name="all_app_category_default">Category</string>
    <string name="all_app_category_entertainment">Entertainment</string>
    <string name="all_app_category_finance_business">Finance &amp; Business</string>
    <string name="all_app_category_games">Games</string>
    <string name="all_app_category_knowledge_education">Knowledge &amp; Education</string>
    <string name="all_app_category_lifestyle">Lifestyle</string>
    <string name="all_app_category_news_reading">News &amp; Reading</string>
    <string name="all_app_category_personal">Personal</string>
    <string name="all_apps_setting_scroll_bar">Scroll bar</string>
    <string name="all_apps_setting_title">Home screen</string>
    <string name="animation_rate_title">Animation speed</string>
    <string name="apply_text">APPLY</string>
    <string name="auto_add_app_shortcut">Place new apps on the Home screen</string>
    <string name="auto_disable_screenbuttons_summary">"Automatically disable navigation buttons when status bar isn't displayed. Double tap any navigation button to re-enable."</string>
    <string name="auto_disable_screenbuttons_title">Automatically disable navigation buttons</string>
    <string name="btn_agree">Agree</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Turn off</string>
    <string name="drawer_background">Backgrounds</string>
    <string name="fsg_mistake_touch_summary">In some cases (e.g. when playing games or watching videos), gestures will only work after they are repeated</string>
    <string name="fsg_mistake_touch_title">Gesture confirmation</string>
    <string name="guide_permission_title">Permissions required</string>
    <string name="home_gesture_global_search">Search</string>
    <string name="home_gesture_no_action">None</string>
    <string name="home_gesture_notification_bar">Notifications</string>
    <string name="home_switch_personal_assistant">-1 screen</string>
    <string name="icon_style">Style</string>
    <string name="key_shortcut_settings_title">Button shortcuts</string>
    <string name="launcher_pull_down_title">Swipe down on the Home screen</string>
    <string name="launcher_search_bar_title">Home screen search bar</string>
    <string name="launcher_slide_up_title">Swipe up on the Home screen</string>
    <string name="launcher_sliding_up_gesture">Swipe up on the Home screen to open search</string>
    <string name="launcher_title">Home screen &amp; Recents</string>
    <string name="lock_screen_cells_title">Lock Home screen layout</string>
    <string name="manager_group_settings">Manage app categories</string>
    <string name="menu_auto_fill_of_uninstall">Fill cells of uninstalled apps</string>
    <string name="menu_cell_setting">Home screen layout</string>
    <string name="menu_default_screen_preview">Set default screen</string>
    <string name="menu_lock">Lock Home screen layout</string>
    <string name="menu_more">More</string>
    <string name="menu_no_word">"Don't show text"</string>
    <string name="menu_trans_effect">Transition effects</string>
    <string name="miui_screen_config_title">Home screen settings</string>
    <string name="monochrome_summary">Change background color for compatible icons</string>
    <string name="monochrome_title">Background color</string>
    <string name="navigation_guide_app_quick_switch_summary">Swipe left or right from the full screen indicator or bottom of the screen</string>
    <string name="navigation_guide_app_quick_switch_title">Switch between apps</string>
    <string name="navigation_guide_app_summary">Swipe left or right from the edge of the screen in top area</string>
    <string name="navigation_guide_app_title">"Trigger app's action"</string>
    <string name="navigation_guide_appswitch_anim_summary">Swipe across the screen starting from the edge to go back to previous app</string>
    <string name="navigation_guide_appswitch_anim_title">Go back to previous app</string>
    <string name="navigation_guide_appswitch_summary">Swipe left or right from the edge of the screen and hold for a while</string>
    <string name="navigation_guide_appswitch_title">Switch to previous app</string>
    <string name="navigation_guide_back_summary">Swipe left or right from the edge of the screen</string>
    <string name="navigation_guide_back_title">Go back</string>
    <string name="navigation_guide_hide_gesture_line_summary">"Don't show full screen indicator when using full screen gestures"</string>
    <string name="navigation_guide_hide_gesture_line_title">Hide full screen indicator</string>
    <string name="navigation_guide_home_summary">Swipe up from the bottom of the screen</string>
    <string name="navigation_guide_home_title">Go to Home screen</string>
    <string name="navigation_guide_recent_summary">Swipe up from the bottom of the screen and pause</string>
    <string name="navigation_guide_recent_title">Open Recents</string>
    <string name="navigation_guide_settings">Gesture demos</string>
    <string name="navigation_position_summary">Custom positions of navigation buttons can only be applied to Home screen</string>
    <string name="navigation_position_title">Navigation buttons position</string>
    <string name="navigation_type_title">System navigation</string>
    <string name="open_personal_assistant_settings">App vault settings</string>
    <string name="open_personal_assistant_title">App vault</string>
    <string name="recents_layout_style">Arrange items in Recents</string>
    <string name="recommend_app">App suggestions</string>
    <string name="screen_cells_config_title">Home screen layout</string>
    <string name="show_most_popular_apps_you_used">Display most frequently used apps in the drawer</string>
    <string name="switch_personal_assistant_app_vault">App vault</string>
    <string name="switch_personal_assistant_google">Google Discover</string>
    <string name="switch_personal_assistant_none">None</string>
    <string name="switch_screen_button_order">Mirror buttons</string>
    <string name="switch_screen_button_order_desc">Mirror Back and Menu buttons</string>
    <string name="term_of_service">Terms and conditions</string>
    <string name="terms_of_services_one">"Welcome to App drawer and Quick Finder. Quick Finder allows you to find apps, in-app content, and items online faster. Read and agree to Xiaomi's "<a href="http://url1"><font color="#B3000000">Privacy Policy</font></a> before using these features.</string>
    <string name="terms_of_services_three">You can turn this feature off in the Settings.</string>
    <string name="terms_of_services_two">Using enhanced search requires sharing necessary personal information, including your search queries, Google Advertising ID, and IP address, with Branch Metrics Inc. Branch will process your personal information in accordance with <a href="http://url1"><font color="#B3000000">Branch Discovery Privacy Policy</font></a>. Read and agree to <a href="http://url2"><font color="#B3000000">End User Discovery Terms &amp; Conditions</font></a> and <a href="http://url3"><font color="#B3000000">Branch Discovery Privacy Policy</font></a> before using this feature.</string>
    <string name="uni_search_permission_msg">Allow POCO Launcher to access your location and contacts to improve search results.</string>
</resources>