<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/navigation_type_title"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/miuisettings">
    <PreferenceCategory android:title="@string/navigation_type_title">
        <com.miui.home.recents.settings.NavBarTypeContainerPreference android:key="nav_bar_type_container_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:key="navigation_setting_category">
        <com.miui.home.settings.preference.CheckBoxPreference android:title="@string/navigation_guide_hide_gesture_line_title" android:key="navigation_hide_gesture_line" android:summary="@string/navigation_guide_hide_gesture_line_summary" />
        <com.miui.home.settings.preference.CheckBoxPreference android:title="@string/fsg_mistake_touch_title" android:key="fsg_mistake_touch" android:summary="@string/fsg_mistake_touch_summary" />
        <com.miui.home.settings.preference.CheckBoxPreference android:title="@string/fsg_assist_enable_title" android:key="fsg_assist_enable" android:summary="@string/fsg_assist_enable_summary" />
        <com.miui.home.settings.preference.CheckBoxPreference android:title="@string/navigation_guide_appswitch_anim_title" android:key="navigation_appswitch_anim" android:summary="@string/navigation_guide_appswitch_anim_summary" />
        <com.miui.home.settings.preference.ValuePreference android:title="@string/navigation_position_title" android:key="navigation_position" android:summary="@string/navigation_position_summary" />
        <com.miui.home.settings.preference.CheckBoxPreference android:title="@string/switch_screen_button_order" android:key="switch_screen_button_order" android:summary="@string/switch_screen_button_order_desc" />
        <com.miui.home.settings.preference.ValuePreference android:title="@string/key_shortcut_settings_title" android:key="button_shortcut" />
        <com.miui.home.settings.preference.ValuePreference android:title="@string/auto_disable_screenbuttons_title" android:key="audo_disable_screen_buttons" android:summary="@string/auto_disable_screenbuttons_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/navigation_guide_settings" android:key="navigation_guide_category">
        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_home_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_home_title" android:key="navigation_guide_home" android:summary="@string/navigation_guide_home_summary" />
        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_recent_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_recent_title" android:key="navigation_guide_recent" android:summary="@string/navigation_guide_recent_summary" />
        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_back_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_back_title" android:key="navigation_guide_back" android:summary="@string/navigation_guide_back_summary" />
        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_app_menu_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_app_title" android:key="navigation_guide_app_menu" android:summary="@string/navigation_guide_app_summary" />
        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_appswitch" android:layout="@layout/navigation_guide_item_without_arrow" android:title="@string/navigation_guide_appswitch_title" android:key="navigation_guide_appswitch" android:summary="@string/navigation_guide_appswitch_summary" />
        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_app_quick_switch_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_app_quick_switch_title" android:key="navigation_guide_app_quick_switch" android:summary="@string/navigation_guide_app_quick_switch_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="归功于" />
    <Preference android:title="🅺🅰🆂🅷🅸" android:summary="主要用户界面和模块">
        <intent android:action="android.intent.action.VIEW" android:data="" />
    </Preference>
</PreferenceScreen>