<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.miui.home.settings.preference.CheckBoxPreference
        android:persistent="false"
        android:title="@string/recommend_app"
        android:key="key_recommend_apps"
        android:summary="@string/show_most_popular_apps_you_used"
        android:defaultValue="false" />
    <com.miui.home.settings.preference.ValuePreference
        android:title="@string/manager_group_settings"
        android:key="key_app_category" />
    <com.miui.home.settings.preference.ValuePreference
        android:title="@string/drawer_background"
        android:key="key_drawer_background" />
    <com.miui.home.settings.preference.ListPreference
        android:title="@string/all_apps_setting_scroll_bar"
        android:key="fast_scroller_style" />
    <com.miui.home.settings.preference.CheckBoxPreference
        android:persistent="false"
        android:title="@string/auto_add_app_shortcut"
        android:key="key_auto_add_new_app_shortcut"
        android:defaultValue="true" />
</PreferenceScreen>