<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/location_permission_view" android:paddingBottom="@dimen/dp7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:paddingStart="@dimen/dp14" android:paddingEnd="@dimen/dp14"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_sp12" android:textColor="@color/alpha30white" android:id="@id/btn_close" android:paddingTop="@dimen/dp8" android:paddingBottom="@dimen/dp8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_close" android:paddingEnd="@dimen/dp8" />
    <TextView android:textSize="@dimen/uni_search_permission_text_size" android:textColor="@color/white" android:gravity="center" android:id="@id/permission_guide_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/guide_permission_title" android:fontFamily="sans-serif-medium" />
    <TextView android:textSize="@dimen/uni_search_permission_text_size" android:textColor="@color/alpha80white" android:gravity="center" android:id="@id/permission_guide_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp12" android:text="@string/uni_search_permission_msg" android:paddingStart="@dimen/dp8" android:paddingEnd="@dimen/dp8" />
    <TextView android:textSize="@dimen/text_size_sp14" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_request_permission" android:background="@drawable/branch_search_guide_btn_bg" android:layout_width="fill_parent" android:layout_height="@dimen/dp40" android:layout_marginTop="@dimen/dp20" android:text="@string/apply_text" android:fontFamily="sans-serif-medium" />
</LinearLayout>