<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:layoutDirection="locale"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.miui.home.settings.preference.IconCustomizePreviewPreference android:key="key_icon_customize_preview" />
    <com.miui.home.settings.preference.ValuePreference android:title="@string/icon_style" android:key="key_icon_style" />
    <PreferenceCategory android:key="key_icon_scale_category">
        <com.miui.home.settings.preference.IconCustomizeSaclePreference android:key="key_icon_scale" />
    </PreferenceCategory>
    <PreferenceCategory android:title="修改">
        <XMiuiCheckBoxPreference android:title="一行中的应用标题" android:key="single_line" android:defaultValue="false" dependentsHide="true" intent="miui.intent.action.MIUI_REGION_CHANGED" />
        <XMiuiCheckBoxPreference android:title="Scrolling title" android:key="scrolling_line" android:dependency="single_line" android:defaultValue="false" intent="miui.intent.action.MIUI_REGION_CHANGED" />
    </PreferenceCategory>
    <com.miui.home.settings.preference.ListPreference android:title="@string/monochrome_title" android:key="key_monochrome" android:summary="@string/monochrome_summary" />
</PreferenceScreen>