<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <miuix.preference.RadioButtonPreferenceCategory
        android:key="home_pull_down">
        <miuix.preference.RadioSetPreferenceCategory>
            <miuix.preference.RadioButtonPreference
                android:persistent="false"
                android:title="@string/home_gesture_global_search"
                android:key="global_search" />
        </miuix.preference.RadioSetPreferenceCategory>
        <miuix.preference.RadioSetPreferenceCategory>
            <miuix.preference.RadioButtonPreference
                android:persistent="false"
                android:title="@string/home_gesture_notification_bar"
                android:key="notification_bar" />
        </miuix.preference.RadioSetPreferenceCategory>
        <miuix.preference.RadioSetPreferenceCategory>
            <miuix.preference.RadioButtonPreference
                android:persistent="false"
                android:title="@string/home_gesture_no_action"
                android:key="no_action" />
        </miuix.preference.RadioSetPreferenceCategory>
    </miuix.preference.RadioButtonPreferenceCategory>
</PreferenceScreen>